<resources>
    <string name="app_name">HistoryContact</string>
    <string name="FACEBOOK_APP_ID">189922041904517</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">b0a1e4ddf3ffe5d617861efa0de6ad0b</string>
    <string name="ak_login_protocol_scheme">ak189922041904517</string>

    <string name="permissions_get_accounts_message">
        Grant permission to read your email address from your device to pre-fill.
    </string>
    <string name="permissions_get_accounts_title">Read Email Address</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="log_in_email_button">Log In via Email</string>
    <string name="log_in_phone_button">Log In via Phone</string>
    <string name="log_out_button">Log Out</string>
    <string name="error_label">Error</string>
    <string name="loading_placeholder">Loading&#8230;</string>
    <string name="user_id_label">Account ID</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="na">NA</string>

    <string name="permission_contact">Contacts</string>
    <string name="permission_location">Location</string>
    <string name="permission_microphone">Microphone</string>
    <string name="permission_phone">Phone</string>
    <string name="permission_sms">SMS</string>
    <string name="permission_storage">Storage</string>
</resources>
